<resources>
    <string name="app_name">Swello</string>
    <!--  Toolbar / Menús  -->
    <string name="toolbar_options_title">Opciones</string>
    <string name="topbar_title">Swello</string>
    <!--  Buscar  -->
    <string name="cd_search">Buscar</string>
    <string name="cd_sort">Ordenar playas</string>
    <string name="hint_search">Buscar...</string>
    <string name="cd_filters">Filtros</string>
    <!--  Login  -->
    <string name="login_user_hint">Usuario</string>
    <string name="login_password_hint">Contraseña</string>
    <string name="login_button">Iniciar sesión</string>
    <string name="login_error">Usuario o contraseña incorrectos</string>
    <string name="register_button">Registro</string>
    <string name="register_name_hint">Nombre</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Contraseña</string>
    <string name="register_birthdate_hint">Fecha de nacimiento</string>
    <string name="mensj_cerrar_sesion">¿Está seguro/a de querer cerrar sesión?</string>
    <string name="Si">Sí</string>
    <string name="No">No</string>


    <!--  Lista / Items  -->
    <string name="item_result_title">Título</string>
    <string name="item_result_desc">Descripción del elemento</string>
    <string name="opcion_informacion">Informacion</string>
    <string name="opcion_idioma">Idioma</string>
    <string name="opcion_tema">Tema</string>
    <string name="opcion_notificaciones">Notificaciones</string>
    <string name="opcion_contacto">Contacto</string>
    <string name="opcion_logout">Cerrar sesion</string>
    <string name="opcion_av_legal">Aviso legal</string>
    <string name="opcion_term_cond">Terminos y condiciones</string>
    <string name="opcion_tam_texto">Tamaño del texto</string>
    <string name="opcion_general">General</string>

    <!--  Mensajes / Logs / Toasts  -->
    <string name="abrir_filtros">Abrir filtros</string>
    <string name="recibidos_filtros">Recibidos filtros: </string>
    <string name="query_generada">Query generada: </string>
    <string name="filtros_aplicados_colon">Filtros aplicados: </string>
    <string name="filtro_listener_no_asignado">Listener no asignado</string>
    <string name="filtros_aplicados">Filtros aplicados</string>
    <string name="flecha_volver_pulsada">Flecha de volver pulsada</string>
    <string name="seleccionaste">Seleccionaste: </string>
    <string name="pulsaste">Pulsaste: </string>
    <string name="selecciona_idioma">Selecciona idioma</string>

    <!-- Tamaños del texto -->
    <string name="Grande">Grande</string>
    <string name="Mediano">Mediano (por defecto)</string>
    <string name="Pequeño">Pequeño</string>

    <!--  Idiomas -->
    <string name="Espanol">Español</string>
    <string name="Ingles">Inglés</string>

    <!-- Contacto -->
    <string name="Titulo">Informacion de contacto</string>
    <string name="contacto">
- Email: swello@gmail.com\n\n
- Teléfono: +34 600 000 000\n\n
- Dirección: Calle del Surf 123, 28000 Madrid, España\n\n
- Horario (Lun–Vie): 9:00 - 18:00\n\n
- Sábado: 10:00 - 14:00\n\n
- Domingo: Cerrado\n\n
- Soporte: support@swello.com\n\n
- Redes sociales:\n
   • Instagram: @swelloInst\n
   • Facebook: @swelloFace\n
   • X: @swelloX\n
   • TikTok: @swelloTikTok
</string>


<string name="Guardar">Guardar</string>


    <!-- Filtro -->
    <string name="tamano_de_las_olas_m">Tamaño de las olas (m)</string>
    <string name="direccion_de_las_olas">Dirección de las olas</string>
    <string name="N">N</string>
    <string name="NE">NE</string>
    <string name="E">E</string>
    <string name="SE">SE</string>
    <string name="S">S</string>
    <string name="SW">SW</string>
    <string name="W">W</string>
    <string name="NW">NW</string>
    <string name="periodo_de_las_olas">Periodo de las olas (s)</string>
    <string name="temperatura_del_agua">Temperatura del agua (°C)</string>
    <string name="nivel_del_surfista">Nivel del surfista</string>
    <string name="principiante">Principiante</string>
    <string name="intermedio">Intermedio</string>
    <string name="experto">Experto</string>
    <string name="servicios_disponibles">Servicios disponibles</string>
    <string name="escuela_surf">Escuela surf</string>
    <string name="aparcamiento">Aparcamiento</string>
    <string name="duchas">Duchas</string>
    <string name="chiringuito">Chiringuito</string>
    <string name="aplicar_filtros">Aplicar filtros</string>
    <string name="distancia_maxima">Distancia máxima (km)</string>
    <string name="ordenar_por">Ordenar por</string>
    <string name="distancia">Distancia (más cercana primero)</string>
    <string name="nombre">Nombre(A-Z)</string>
    <string name="altura_olas">Altura de olas (mayor primero)</string>
    <!--  playa detail pantalla  -->
    <string name="playa_card_uno">valoración</string>
    <string name="playa_fotos">Fotos</string>
    <string name="playa_mareas">Mareas</string>
    <string name="playa_clima">Tiempo y clima</string>
</resources>